--- a/stv_project_2.5.7/stv_project_2.5.7/Info.plist
+++ b/stv_project_2.5.7/stv_project_2.5.7/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>カメラ使います</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>アルバム使います</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>位置情報を利用しますね</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
