--- a/stv_project_2.5.3/stv_project_2.5.3/Info.plist
+++ b/stv_project_2.5.3/stv_project_2.5.3/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>撮影した写真を保存します</string>
 </dict>
 </plist>
