fixd_stv_project_2.5.2訂正致しました。

--- a/stv_project_2.5.2/stv_project_2.5.2/Info.plist
+++ b/stv_project_2.5.2/stv_project_2.5.2/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>カメラ使います</string>
+	<string>アルバム使います</string>
 	<key>NSCameraUsageDescription</key>
 	<string>カメラ使います</string>
 	<key>CFBundleDevelopmentRegion</key>
